--- a/View/eventFlow.html
+++ b/View/eventFlow.html
@@ -6,8 +6,12 @@
     <script src="../Javascript/Helperscripts/jquery-ui.min.js"></script>
     <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.4.1-all-min.js"></script>
     <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.6.4-min.js"></script>
+    <script src="../Javascript/Helperscripts/jquery.blockUI.js"></script>
     <script src="../Javascript/Customscripts/trail.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/eventFlow.js" type="text/javascript"></script>
+    <script src="../Javascript/Customscripts/receiver.js" type="text/javascript"></script>
+    <script src="../Javascript/Customscripts/publisher.js" type="text/javascript"></script>
+    <script src="../Javascript/Customscripts/executionPlan.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../CSS/restartstyle.css">
     <link rel="stylesheet" type="text/css" href="../CSS/propertybox.css">
@@ -105,7 +109,7 @@
                     <button id="exportButton" class="myButton">Export</button>
                 </td>
                 <td>
-                    <button id="loadButton" class="myButton" style="margin-left: -630px">Load</button>
+                    <button id="load-button" class="myButton" style="margin-left: -630px">Load</button>
                 </td>
             </tr>
         </table>
