--- a/View/eventFlow.html
+++ b/View/eventFlow.html
@@ -1,18 +1,28 @@
 <html>
 <head>
+    <!--backbone-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js" type="text/javascript"></script>
 
     <script src="../Javascript/Helperscripts/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="../Javascript/Helperscripts/jquery-ui.min.js"></script>
+
+    <!--JSPlumb libraries-->
     <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.4.1-all-min.js"></script>
     <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.6.4-min.js"></script>
     <script src="../Javascript/Helperscripts/jquery.blockUI.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+
+    <!--Custom scipts-->
     <script src="../Javascript/Customscripts/trail.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/eventFlow.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/receiver.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/publisher.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/executionPlan.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="../Javascript/Customscripts/storage.js" type="text/javascript"></script>
+
     <link rel="stylesheet" type="text/css" href="../CSS/restartstyle.css">
     <link rel="stylesheet" type="text/css" href="../CSS/propertybox.css">
     <link rel="stylesheet" type="text/css" href="../CSS/eventFlow.css">
