--- a/View/Index.html
+++ b/View/Index.html
@@ -19,7 +19,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../CSS/restartstyle.css">
     <link rel="stylesheet" type="text/css" href="../CSS/propertybox.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/eventFlow.css.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/eventFlow.css">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="../CSS/pe-icon-7-stroke.css" rel="stylesheet" />
@@ -110,12 +110,12 @@
     <div class="col-sm-7 container" id="container" >
     </div>
 
-    <!--<div style="float: left" class="property" id="propertypane">-->
+    <!--<div class="property" id="propertypane">-->
             <!--<h1 class="toolbox-titlex" id="toolbox-titlex" name="toolbox-titlex">Properties</h1>-->
             <!--<form class="panel"  id="lot" name="lot">-->
             <!--</form>-->
     <!--</div>-->
-    <div class="property col-sm-3 collapse">
+    <div class="property col-sm-3 collapse" id="propertypane">
 
     </div>
 
