--- a/View/Index.html
+++ b/View/Index.html
@@ -5,11 +5,15 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.0/backbone.localStorage-min.js" type="text/javascript"></script>
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="../Javascript/Helperscripts/jquery-ui.min.js"></script>
     <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.4.1-all-min.js"></script>
     <script src="../Javascript/Helperscripts/jsoneditor.js"></script>
     <script src="../Javascript/Helperscripts/jquery.jsPlumb-1.6.4-min.js"></script>
+    <script src="../Javascript/Helperscripts/dagre.js"></script>
+    <script src="../Javascript/Helperscripts/dagre.min.js"></script>
+
     <script src="../Javascript/Customscripts/main.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/formBuilder.js" type="text/javascript"></script>
     <script src="../Javascript/Customscripts/storage.js" type="text/javascript"></script>
@@ -147,6 +151,9 @@
                 </td>
                 <td>
                     <button id="loadButton" class="myButton" style="margin-left: -630px">Load</button>
+                </td>
+                <td>
+                    <button id="auto-align" class="myButton" style="margin-left: -630px">Align</button>
                 </td>
             </tr>
         </table>
