auto align and redraw connections

--- a/View/eventFlow.html
+++ b/View/eventFlow.html
@@ -86,10 +86,8 @@
     <div id="container" class="container">
     </div>
 
-    <div style="float: left" class="property" id="propertypane">
-        <h1 class="toolbox-titlex" id="toolbox-titlex" name="toolbox-titlex">Properties</h1>
-        <form class="panel" id="lot" name="lot">
-        </form>
+    <div class="property col-sm-3 collapse" id="propertypane">
+
     </div>
 
     <!--Json Output and Manipulation Panel-->
