--- a/CSS/restartstyle.css
+++ b/CSS/restartstyle.css
@@ -251,6 +251,7 @@
 }
 .jsplumb-connector {
     z-index: 4;
+    padding: 50px;
 
 }
 .jsplumb-endpoint, .endpointTargetLabel, .endpointSourceLabel {
